Z-iNdex Fix

--- a/assets/css/blocks/_header.css
+++ b/assets/css/blocks/_header.css
@@ -34,7 +34,7 @@ div [class*="wp-block"].isp-header {
 
 .isp-header--squiggle {
 	position: absolute;
-	z-index: 20;
+	z-index: 5;
 	top: 50px;
 	left: -20px;
 
